# emlite-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.browser.md  README.emscripten.md  README.freestanding.md  README.md  README.npmjs.md  build_tests.sh  index.html  package.json
.github/workflows/: node.js.yml
cmake/: emliteConfig.cmake.in  wasi_libc.cmake  wasi_sysroot.cmake
emlite-rs/: Cargo.toml
emlite-rs/examples/: console.rs
emlite-rs/src/: id.rs  lib.rs
examples/: CMakeLists.txt  README.md  audio.cpp  bind.cpp  cbind.c  console.c  dom_simple.cpp  dom_test1.cpp  dom_test1_nostdlib.cpp  dom_test2.c  dom_test2_nostdlib.c  eval.cpp  node_readfile.cpp
include/emlite/: emlite.h  emlite.hpp  emlite_emscripten_impl.i  emlite_impl.i  emlite_impl.ipp  mem.hpp  tiny_traits.hpp
include/emlite/detail/: externs.h  func.hpp  mem.hpp  tiny_traits.hpp  utils.hpp
rust/emlite/: Cargo.toml  README.md  build.rs
rust/emlite-rs/: Cargo.toml  README.md
rust/emlite-rs/.cargo/: config.toml
rust/emlite-rs/examples/: audio.rs  console.rs  dom.rs
rust/emlite-rs/examples/.cargo/: config.toml
rust/emlite-rs/src/: defs.rs  lib.rs
rust/emlite/.cargo/: config.toml
rust/emlite/ems_env/: main.c
rust/emlite/examples/: audio.rs  bind.rs  console.rs  dom.rs  eval.rs
rust/emlite/src/: defs.rs  env.rs  lib.rs  shared.rs
scripts/: build_tests.js  clang-doc-default-stylesheet.css  gen_html_tests.js
src/: emlite.c  emlite.cpp  emlite.js  emlite_emscripten.c  emlite_emscripten_impl.c  emlite_impl.c  emlite_impl.cpp
tests/: build_tests.js  dom_test1.cpp  dom_test1_nostdlib.cpp  dom_test2.c  dom_test2_nostdlib.c  gen_html_tests.js  index.js  node_test.js  node_test_nowasi.js  node_test_wasi.js
zig/emlite/: README.md  build.zig
zig/emlite/examples/: array.zig
zig/emlite/src/: root.zig
